Fixed Sizing on mobile

--- a/index.css
+++ b/index.css
@@ -4,6 +4,15 @@
     margin-bottom: 40px;
 }
 
+@media(max-width: 576px) {
+    .title-section {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-left: 0%;
+    }
+}
+
 .missionText {
     margin-top: 40px;
     margin-bottom: 20px;
@@ -56,8 +65,26 @@ img {
     padding-bottom: 20px;
 }
 
+@media(max-width: 576px) {
+    .topContent {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-left: 0%;
+    }
+}
+
 .bottomContent {
     color: white!important;
+}
+
+@media(max-width: 576px) {
+    .bottomContent {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-left: 0%;
+    }
 }
 
 .mainBtn {
@@ -109,6 +136,28 @@ footer {
   .tabs .tabs-item-selected {
     display: block;
   }
+
+  @media(max-width: 992px) {
+    .tabs-items {
+        display: flex;
+        padding-top: 20px!important;
+    }
+}
+
+  @media(max-width: 768px) {
+    .tabs-items {
+        display: flex;
+        padding-top: 20px!important;
+    }
+}
+
+@media(max-width: 576px) {
+    .tabs-items {
+        display: flex;
+        padding-top: 20px!important;
+    }
+}
+
   .tabs .tabs-links {
     display: flex;
     background-color: #1B98E0;
@@ -159,6 +208,7 @@ footer {
   /* This is where CSS for 'AboutUs' page starts */
 
   .meetTheTeam {
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 
@@ -193,5 +243,15 @@ footer {
 .personText:hover {
     background-color: #006494;
     transform: scale(1.1);
+}
+
+@media(max-width: 576px) {
+    .article {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-left: 0%;
+        margin-top: 5%;
+    }
 }
 
